# raytracer

./: .gitignore  CMakeLists.txt  README.md  config  example_config.yaml
cmake/: FindYamlCpp.cmake
lib/x64/: libyaml-cppmd.lib
lib/x86/: libyaml-cppmd.lib
src/: main.cpp
src/raytracer/: bbox.cpp  bbox.h  bvhnode.cpp  bvhnode.h  camera.cpp  camera.h  ray.cpp  ray.h  raytracer.cpp  raytracer.h  triangle.cpp  triangle.h  trianglemesh.cpp  trianglemesh.h  vec3.hpp
